--- a/client/src/components/LoginSignForm/style.css
+++ b/client/src/components/LoginSignForm/style.css
@@ -49,11 +49,22 @@ body{width:100%;height:700px;margin:0;padding:0;}
     border-radius:2px;
 }
 
-#first,#last,#confirm{width:250px;}
-#email{width:175px;}
-#password{width:125px;margin-left:6px !important;}
+#first,#last,#confirm{
+    width:250px;
+}
 
+#email{
+    width:175px;
+}
 
-#login > #email,#login > #password,#login >button{width:250px;margin-left:125px !important;margin-top:20px;height:25px;}
+#password{
+    width:125px;
+    margin-left:6px !important;
+}
 
-
+#login, #email, #login, #password, button {
+    width:250px;
+    margin-left:125px !important;
+    margin-top:20px;
+    height:25px;
+}
